<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.login.ui.login.LoginActivity">


    <ImageView
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:src="@drawable/image"
        android:contentDescription="@string/label_image_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#0d6e6a"
        android:textSize="35sp"
        android:textStyle="bold"
        android:letterSpacing="0.03"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:text="@string/email"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:text="@string/password"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"/>


    <Button
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:layout_marginTop="20dp"/>



    <Button
        android:id="@+id/skip_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="@string/skip" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />
</LinearLayout>