<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/edt_username"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:hint="@string/label_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:hint="@string/email"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:hint="@string/password"
        android:textColor="#0d6e6a"
        android:textStyle="bold"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"/>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:layout_marginTop="20dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        tools:visibility="visible" />


</LinearLayout>