<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/home_bg">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_green"
        android:textSize="45sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/botol"
            android:layout_width="350dp"
            android:layout_height="90dp"
            app:cardBackgroundColor="#FFE9F9"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="25dp">

                <ImageView
                    android:id="@+id/botol_img"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:src="@drawable/botol"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/botol_img"
                    android:text="Botol Kaca"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:letterSpacing="0.03"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/kertas"
            android:layout_below="@id/botol"
            android:layout_width="350dp"
            android:layout_height="90dp"
            app:cardBackgroundColor="#FFF5E5"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="25dp">

                <ImageView
                    android:id="@+id/kertas_img"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:src="@drawable/kertas"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/kertas_img"
                    android:text="@string/kertas"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:letterSpacing="0.03"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"/>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/plastic"
            android:layout_below="@id/kertas"
            android:layout_width="350dp"
            android:layout_height="90dp"
            app:cardBackgroundColor="#FFF5E5"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="25dp">

                <ImageView
                    android:id="@+id/plastic_img"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:src="@drawable/plastic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/plastic_img"
                    android:text="@string/plastic"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:letterSpacing="0.03"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</LinearLayout>